--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "ARA-platform",
-  "version": "3.0.0",
-  "author": "Ameed Jadallah",
-  "licence": "MIT",
-  "homepage": "https://araplus.info",
-  "private": false,
+  "name": "ara",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/cache": "11.10.5",
@@ -25,14 +20,18 @@
     "@mui/x-date-pickers": "5.0.19",
     "apexcharts": "3.37.0",
     "date-fns": "2.29.3",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
     "formik": "2.2.9",
-    "next": "13.1.6",
+    "next": "13.4.13",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
     "simplebar-react": "^3.2.1",
+    "stylis": "^4.3.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "yup": "1.0.0"
   },
   "devDependencies": {
@@ -40,8 +39,6 @@
     "@types/nprogress": "0.2.0",
     "@types/numeral": "2.0.2",
     "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6"
+    "@types/react-dom": "18.0.11"
   }
 }
