--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "2.29.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "firebase": "^10.1.0",
     "formik": "2.2.9",
     "next": "13.4.13",
     "nprogress": "0.2.0",
