--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Devias Kit",
-  "name": "Devias Kit",
+  "short_name": "ARA Platform",
+  "name": "ARA Platform",
   "icons": [
     {
       "src": "favicon.ico",
